# simple_web_server

./: .gitignore  CMakeLists.txt  README.md  web_server.kdev4
examples/: main.cpp
json/: array.h  attribute.h  helper.h  importer.h  object.h  parse_tree_node.h
modules/: file_loader.cpp  file_loader.h
modules/web_socket/: accept.cpp  accept.h  frame_decoder.cpp  frame_decoder.h  frame_encoder.cpp  frame_encoder.h  web_socket.cpp  web_socket.h
network/: base_socket.h  epoll_server.h  ip_addr.h  memory_region.h  memory_region_view.h  os_pipe.h  pkt_buffer.h  socket_container.h  socket_pipe.h  ssl_connection.h  ssl_context.h  status.h  tcp_connection.h  tcp_socket.h  udp_socket.h  wait_ops.h
src/: config.h  connection_thread.cpp  connection_thread.h  file_loader.cpp  file_loader.h  http_parser.cpp  http_parser.h  http_request.cpp  http_request.h  http_status_code.cpp  http_status_code.h  main.cpp  shared_context.h  web_server.cpp  web_server.h
tests/: main.cpp
util/: base64.cpp  base64.h  command_line_argument_parser.cpp  command_line_argument_parser.h  get_in_pack.h  logger.cpp  logger.h  named_options.h  named_pair.h  named_type.h  pack_instances.h  pack_iteratable.h  parse_json_to.h  proxy_receiver.cpp  proxy_sender.cpp  signal_interrupt.cpp  signal_interrupt.h  static_math.h  string_literal.h  string_to_int.h  table_converter.cpp  table_converter.h  tagged_type.h
web_server/: config.h  connection_thread.h  http_parser.h  http_request.cpp  http_request.h  http_status_code.cpp  native_handle.cpp  native_handle.h  native_handler.h  native_interface.cpp  native_interface.h  network_interface.h  on_destroy.h  shared_context.h  ticket_distributer.h  unique_context.h  web_server.cpp  web_server.h  worker.h
web_server/http/: executor.cpp  executor.h  parser.cpp  parser.h  request.h  requester.cpp  requester.h  response.h  status_code.cpp  status_code.h
web_server/module/: adapter.h  definition.h  invoker.h
web_server/native/: executor.cpp  executor.h  handle.cpp  handle.h  send_recv_interface.cpp  send_recv_interface.h
web_server/ssl_accept/: executor.cpp  executor.h
web_server/web_socket/: frame_encoder.h
www/: controller.js  index.html  style.css
www/console/: console.html  func.js  style.css
